--- a/index.html
+++ b/index.html
@@ -1,36 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head lang="en">
-        <title>Odin-Recipes</title>
+    <head>
+        <title>Basic Projects</title>
         <meta charset="UTF-8">
     </head>
+    
     <!--  -->
+
     <body>
-        <h1>ODIN RECIPES</h1>
-        <p>Explore the only five recipes you are ever going to see on this site !!!<br>
-        Hope web dev is as fun as cooking.<br>
-        </p>
-        <br>
-        <br>
-        <h2>Explore Recipes</h2>
+        <h1>Basic Projects</h1>
         <p>
-            <em>Let's Dive Into Some Mouthwatering Recipes :)</em>
-        </p>
-        <ul>
-            <li>
-                <h3><a href="./recipes/honey-lime-chicken.html">Honey Lime Chicken</a></h3>
-            </li>
-            <li>
-                <h3><a href="./recipes/chicken-tetrazzini.html">Chicken Tetrazzini</a></h3>
-            </li>
-            <li>
-                <h3><a href="./recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a></h3>
-            </li>
-        </ul>
-        <p>
-            <strong>Note:</strong><em>All the recipes on this web page are inspired by the recipes available on <a href="http://www.allrecipes.com">www.allrecipes.com</a></em>
-            <br>
-            <a href="./references.html">References</a>
+            A set of basic web development projects<br>
+            that I encountered during while learning the subject
         </p>
     </body>
 </html>
