--- a/index.html
+++ b/index.html
@@ -13,5 +13,13 @@
             A set of basic web development projects<br>
             that I encountered during while learning the subject
         </p>
+        <br />
+        <br />
+        <h2>Projects</h2>
+        <ul>
+            <li>
+                <a href="./odin-recipes/index.html">Odin Recipes</a>
+            </li>
+        </ul>
     </body>
 </html>
